// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoadingError /> should render correctly when Not Found error message is passed 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LoadingError
    error={
        Object {
            "message": "Not Found",
          }
    }
    id="12"
    pageType="bar"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <FormattedMessage
        defaultMessage="{type} {id} doesn't exist"
        id="app.containers.LoadingError.doesntExist"
        values={
                Object {
                        "id": "12",
                        "type": "bar",
                      }
        }
/>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "defaultMessage": "{type} {id} doesn't exist",
        "id": "app.containers.LoadingError.doesntExist",
        "values": Object {
          "id": "12",
          "type": "bar",
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "h1",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <FormattedMessage
          defaultMessage="{type} {id} doesn't exist"
          id="app.containers.LoadingError.doesntExist"
          values={
                    Object {
                              "id": "12",
                              "type": "bar",
                            }
          }
/>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "defaultMessage": "{type} {id} doesn't exist",
          "id": "app.containers.LoadingError.doesntExist",
          "values": Object {
            "id": "12",
            "type": "bar",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "h1",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<LoadingError /> should render correctly when unknown error message passed 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LoadingError
    error={
        Object {
            "message": "foo",
          }
    }
    id="12"
    pageType="bar"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <FormattedMessage
        defaultMessage="Error occured: {error}"
        id="app.containers.LoadingError.unknownError"
        values={
                Object {
                        "error": "foo",
                      }
        }
/>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "defaultMessage": "Error occured: {error}",
        "id": "app.containers.LoadingError.unknownError",
        "values": Object {
          "error": "foo",
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "h1",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <FormattedMessage
          defaultMessage="Error occured: {error}"
          id="app.containers.LoadingError.unknownError"
          values={
                    Object {
                              "error": "foo",
                            }
          }
/>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "defaultMessage": "Error occured: {error}",
          "id": "app.containers.LoadingError.unknownError",
          "values": Object {
            "error": "foo",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "h1",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
